# claude_usage

./: .env.example  .gitignore  CLAUDE.md  GOOGLE_SHEETS_SETUP.md  IMPLEMENTATION_STATUS.md  README.md  pyproject.toml  setup.sh
config/: com.claude-usage.daily.plist  com.claude-usage.receiver.plist
src/: aggregator.py  analytics.py  pricing.py  receiver.py  sheets.py  utils.py
src/api/: __init__.py  export.py  stats.py
static/css/: charts.css  dashboard.css  main.css
static/js/: api.js  charts.js  dashboard.js  utils.js
templates/: base.html  dashboard.html
