[project]
name = "claude-usage"
version = "0.1.0"
description = "Claude Code usage statistics tracker via OpenTelemetry"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "gspread>=6.1",
    "google-auth>=2.37",
    "python-dotenv>=1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
